option('default_data_host', type: 'string', description: 'Set the compile-time value for the default download hostname')
option('default_path_prefix', type: 'string', value: 'yggdrasil', description: 'Set the compile-time value for the default path prefix')
option('vendor', type: 'boolean', value: false, description: 'Bundle go module dependencies in the vendor directory')
option('examples', type: 'boolean', value: false, description: 'Build and install the example workers')
option('gobuildflags', type: 'array', value: ['-buildmode', 'pie'], description: 'Additional build flags to be passed to the Go compiler')
option('goldflags', type: 'string', value: '', description: 'Additional linker flags to be passed to the Go compiler')
option('build_srpm', type: 'boolean', value: false, description: 'Enable SRPM builds')
option('user', type: 'string', value: 'yggdrasil', description: 'yggd system user name')
option('worker_user', type: 'string', value: 'yggdrasil-worker', description: 'worker user name')
option('selinux_module', type: 'boolean', value: false, description: 'build custom selinux module')
option('selinux_policy', type: 'string', value: 'targeted', description: 'default SELinux policy type')